// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PayPalSDKButton stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="w-full relative isolate"
    style="z-index: 1;"
  >
    <div
      class="absolute inset-0 w-full h-12 bg-muted animate-pulse rounded"
    />
    <div
      class=""
      style="min-height: 48px; position: relative; z-index: 1; opacity: 0; transition: opacity 0.2s ease-in;"
    />
  </div>
</div>
`;

exports[`PayPalSDKButton stories snapshot > Disabled story renders and matches snapshot 1`] = `
<div>
  <div
    class="w-full relative isolate"
    style="z-index: 1;"
  >
    <div
      class="absolute inset-0 w-full h-12 bg-muted animate-pulse rounded"
    />
    <div
      class="pointer-events-none opacity-50"
      style="min-height: 48px; position: relative; z-index: 1; opacity: 0; transition: opacity 0.2s ease-in;"
    />
  </div>
</div>
`;

exports[`PayPalSDKButton stories snapshot > VerticalLayout story renders and matches snapshot 1`] = `
<div>
  <div
    class="w-full relative isolate"
    style="z-index: 1;"
  >
    <div
      class="absolute inset-0 w-full h-12 bg-muted animate-pulse rounded"
    />
    <div
      class=""
      style="min-height: 48px; position: relative; z-index: 1; opacity: 0; transition: opacity 0.2s ease-in;"
    />
  </div>
</div>
`;

exports[`PayPalSDKButton stories snapshot > WithTagline story renders and matches snapshot 1`] = `
<div>
  <div
    class="w-full relative isolate"
    style="z-index: 1;"
  >
    <div
      class="absolute inset-0 w-full h-12 bg-muted animate-pulse rounded"
    />
    <div
      class=""
      style="min-height: 48px; position: relative; z-index: 1; opacity: 0; transition: opacity 0.2s ease-in;"
    />
  </div>
</div>
`;
